Fix wrong font applied
This was because double quotes are escaped.

--- a/app/components/ui/search/styles.scss
+++ b/app/components/ui/search/styles.scss
@@ -1,6 +1,6 @@
 .heading,
 .suggestions-heading {
-	font-family: Merriweather, Georgia, "Times New Roman", Times, serif;
+	font-family: Merriweather, Georgia, 'Times New Roman', Times, serif;
 	font-weight: 100;
 }
 
